[package]
name = "impl_serde_serialize_error"
description = "Macro for fast implementing error methods in serde::Serializer trait"
categories = ["accessibility"]
keywords = ["serde", "macro", "serialize", "error"]

version = "1.0.2"
edition = "2021"

repository = "https://github.com/Kinetus/impl_serde_serialize_error"
documentation = "https://docs.rs/impl_serde_serialize_error"
readme = "README.md"

authors = ["Trard"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"

[dev-dependencies]
thiserror = "1.0"