[package]
name = "impl_serialize"
description = "Macro for common implementing methods in serde::Serializer trait"
categories = ["accessibility"]
keywords = ["serde", "macro", "serialize", "error"]

version = "3.0.0"
edition = "2021"

repository = "https://github.com/Trard/impl_serialize"
documentation = "https://docs.rs/impl_serialize"
readme = "README.md"

authors = ["Trard"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
unhygienic2 = "0.1.0"

[dev-dependencies]
thiserror = "1.0"
